changing helper class to prevent conflict with "invisible" effect

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body, button, select, input, textarea, label { color: whitesmoke; font-family: V
 .visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
 
-.invisible { visibility: hidden; }
+.zinvisible { visibility: hidden; }
 
 .clearfix:before, .current-char:before, .current-char-skill:before, .clearfix:after, .current-char:after, .current-char-skill:after { content: " "; display: table; }
 .clearfix:after, .current-char:after, .current-char-skill:after { clear: both; }
