--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -12,7 +12,7 @@
 	@include visually-hidden;
 }
 
-.invisible {
+.zinvisible {
 	@include invisible;
 }
 
